2009-01-06  Valentin Hilbig  <tino@zoo.03.softkill.net>

	* xd.h (tino_xd_init, tino_xd_flush, tino_xd_do, tino_xd_exit): added

2008-11-03  Valentin Hilbig  <tino@zoo.03.softkill.net>

	* sock_tool.h (tino_sock_wrapO): Bugfix on dupping wrapped fd to
	/dev/null.

2008-11-02  Valentin Hilbig  <tino@zoo.03.softkill.net>

	* scale.h (tino_scale_number): bugfix in number scaling: In
	certain (most common) situations one digit too much was rendered.

	* getopt.h (tino_getopt_usage): TINO_GETOPT_TYPE_IGNORE now no
	more output on help

2008-10-30  Valentin Hilbig  <tino@zoo.03.softkill.net>

	* buf.h (TINO_BUF_INC): added

2008-10-29  Valentin Hilbig  <tino@zoo.03.softkill.net>

	* scale.h (tino_scale_number): corrected

2008-10-28  Valentin Hilbig  <tino@zoo.03.softkill.net>

	* sock.h (tino_sock_accept_addrI): argument now tino_sockaddr_t,
	which unifies all the other calls.

	* sock_tool.h (tino_sock_wrap): corrected

	* scale.h (tino_scale_number): bugfix, terminating NUL was missing

	* file.h (tino_file_readE, tino_file_writeE): As read/write can
	return without EINTR on an alarm(), always run TINO_ALARM_RUN().
	* alarm.h (tino_alarm_run): removed possible errno sideffect to
	have more easy use of TINO_ALARM_RUN().

2008-10-21  Valentin Hilbig  <tino@zoo.03.softkill.net>

	* auxbuf.h (tino_auxbufOn): Bugfix, I got wrong the call to
	tino_realloc0obO().  Apparently the latter function has a too
	complex and confusing parameter set (as I mixed it myself).  Shall
	redesign that sometimes.

2008-10-20  Valentin Hilbig  <tino@zoo.03.softkill.net>

	* alloc.h (TINO_ALLOC_ALIGN_PAGE, tino_alloc_align_size): added

2008-10-19  Valentin Hilbig  <tino@zoo.03.softkill.net>

	* scale.h (tino_scale_max, tino_scale_buf, tino_scale_ret)
	(tino_scale_seconds, tino_scale_bytes, tino_scale_throughput):
	added

	* auxbuf.h (tino_auxbufOn): commented

2008-10-16  Valentin Hilbig  <tino@zoo.03.softkill.net>

	* err.h (TINO_ERR): changed to only take one string parameter