@@ -1,3 +1,8 @@
+2009-01-10  Valentin Hilbig  <tino@zoo.03.softkill.net>
+
+	* type.h: changed to stdint (C99), as this shall be easily supported even
+	on C89 compilers
+
 2009-01-06  Valentin Hilbig  <tino@zoo.03.softkill.net>
 
 	* xd.h (tino_xd_init, tino_xd_flush, tino_xd_do, tino_xd_exit): added
